[tool.poetry]
name = "discord-interactions-flask"
version = "0.1.1"
description = ""
authors = ["David Buckley <david@davidbuckley.ca>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/buckley-w-david/discord-interactions-flask"
repository = "https://github.com/buckley-w-david/discord-interactions-flask"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.3"
jsons = "^1.6.3"
urllib3 = "^1.26.10"
PyNaCl = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
pydocstyle = "^6.1.1"
Sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"
pyright = "^1.1.282"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
