[tool.poetry]
name = "meta-bot"
version = "0.1.0"
description = ""
authors = ["David Buckley <david@davidbuckley.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.3"
discord-interactions-flask = { path = "../..", develop=true }

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
